summaries/A_Run_All/errors.txt
❌ generate_weather_csv ERROR:
Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/generate_weather_csv.py", line 88, in <module>
    generate_weather_csv()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/generate_weather_csv.py", line 52, in generate_weather_csv
    merged = pd.merge(
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/reshape/merge.py", line 170, in merge
    op = _MergeOperation(
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/reshape/merge.py", line 794, in __init__
    ) = self._get_merge_keys()
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/reshape/merge.py", line 1311, in _get_merge_keys
    left_keys.append(left._get_label_or_level_values(lk))
  File "/opt/hostedtoolcache/Python/3.10.18/x64/lib/python3.10/site-packages/pandas/core/generic.py", line 1911, in _get_label_or_level_values
    raise KeyError(key)
KeyError: 'away_team'

---

❌ combine_pitcher_weather_park_away ERROR:
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 30
    on=["last_name, first_name", "away_team
                                 ^
SyntaxError: unterminated string literal (detected at line 30)

---

